--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,3 +1,30 @@
-.message {
-
+.task {
+    display: flex;
+    border: 1px solid greenyellow;
+    background-color: #c0f68d;
+    border-radius: 5px;
+    width: 300px;
+    height: 100px;
+    align-items: flex-end;
+    padding: 5px;
+}
+.avatar img{
+    width: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.message{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid green;
+    color: blueviolet;
+    background-color: #27c686;
+    justify-content: space-around;
+    height: 80px;
+    margin-bottom: 7px;
+}
+.time{
+    margin-left: 10px;
+    opacity: 0.5;
+    margin-bottom: 5px;
 }
