--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,7 +1,10 @@
 .task {
+    margin-left: 10px;
     display: flex;
     border: 1px solid greenyellow;
-    background-color: #c0f68d;
+    background-image: url("https://raw.githubusercontent.com/telegramdesktop/tdesktop/dev/Telegram/Resources/art/bg_initial.jpg");
+    background-position-y: -54px;
+    background-attachment: fixed;
     border-radius: 5px;
     width: 300px;
     height: 100px;
@@ -11,18 +14,41 @@
 .avatar img{
     width: 50px;
     border-radius: 50%;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 .message{
+    position:relative;
+    border-radius: 10px 10px 10px 0 ;
     display: flex;
     flex-direction: column;
-    border: 1px solid green;
     color: blueviolet;
-    background-color: #27c686;
+    background-color: #ffffff;
     justify-content: space-around;
     height: 80px;
     margin-bottom: 7px;
+    padding: 0 5px;
 }
+.message::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 100%;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: radial-gradient(40px at top left, transparent 50%, rgba(255, 255, 255, 1) 0) no-repeat right bottom;
+}
+/*.message.droplet:before {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: -8px;
+    width: 12px;
+    height: 1px;
+    background-color: inherit;
+    z-index: 1;
+    box-shadow: 0px 1px 1px 1px rgba(160,172,182,.5);
+}*/
 .time{
     margin-left: 10px;
     opacity: 0.5;
