--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -1,3 +1,18 @@
-.someClass {
+.divForAll{
+    margin-left: 5px;
+    border:1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    width: 200px;
+}
+.divForButton {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
 
+}
+.divForAffair{
+    display: flex;
+    justify-content: space-between;
+    color:blueviolet;
 }
