--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     padding: 10px;
     width: 200px;
-    background-image: url("https://raw.githubusercontent.com/telegramdesktop/tdesktop/dev/Telegram/Resources/art/bg_initial.jpg");
+    background-color: #FFAA00;
 }
 .divForButton {
     margin-top: 10px;
